feat(duckdb): integrate DuckDB-WASM for in-browser SQL processing
- Add @duckdb/duckdb-wasm dependency to package.json
- Implement DuckDB initialization and basic usage in +page.svelte
- Update vite.config.ts to support ES format for workers

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"vite": "^6.2.5"
 	},
 	"dependencies": {
+		"@duckdb/duckdb-wasm": "^1.29.1-dev132.0",
 		"vega": "^6.1.2",
 		"vega-embed": "^7.0.2",
 		"vega-lite": "^6.1.0"
